--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ARPI600/WiringPi2-Python"]
 	path = ARPI600/WiringPi2-Python
 	url = https://github.com/WiringPi/WiringPi2-Python.git
+[submodule "ARPI600_C-samples/wiringPi"]
+	path = ARPI600_C-samples/wiringPi
+	url = git://git.drogon.net/wiringPi
